WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70247
AX: The scrollArea is not correctly returning the scrollbars
https://bugs.webkit.org/show_bug.cgi?id=70247
Summary
AX: The scrollArea is not correctly returning the scrollbars
chris fleizach
Reported
2011-10-17 10:06:27 PDT
The AXScroll area is not returning the right elements for horizontal and vertical scrollbars. It looks like this is because on WK2 there is an if block that is causing problems
Attachments
patch
(8.70 KB, patch)
2011-11-16 17:08 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(9.87 KB, patch)
2011-11-16 18:10 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-11-16 12:51:17 PST
Problem is that we're getting caught in a if/else block when there's no render object
chris fleizach
Comment 2
2011-11-16 17:08:26 PST
Created
attachment 115488
[details]
patch
chris fleizach
Comment 3
2011-11-16 17:09:29 PST
Comment on
attachment 115488
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=115488&action=review
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapper.mm:2232 > +
this block looks big, but all it does is make sure that we only do AXStartMarker and EndMarker when the m_object has a renderer()
chris fleizach
Comment 4
2011-11-16 18:10:09 PST
Created
attachment 115501
[details]
patch
chris fleizach
Comment 5
2011-11-17 13:49:09 PST
http://trac.webkit.org/changeset/100666
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug