AX: The scrollArea is not correctly returning the scrollbars https://bugs.webkit.org/show_bug.cgi?id=70247

Reviewed by Beth Dakin.

Source/WebCore:

A few bugs that were preventing this from working.
   1) In accessibilityAttributeValue: when an element did not have a renderer() we were returning earlier than we should have
   2) We were not updating and clearing the scrollbars correctly when children were cleared or when asked for.

Test: platform/mac/accessibility/scrollbars.html

* accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::scrollBar):
(WebCore::AccessibilityScrollView::clearChildren):
* accessibility/AccessibilityScrollView.h:
* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests:

* platform/mac/accessibility/scrollbars-expected.txt: Added.
* platform/mac/accessibility/scrollbars.html: Added.



Canonical link: https://commits.webkit.org/89168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100666 268f45cc-cd09-0410-ab3c-d52691b4dbfc